# git-nested

./: .codecov.yml  .fish.rc  .gitignore  .project  .pydevproject  .rc  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: diagrams.md
lib/: git-nested  git_nested.py
share/: completion.bash  enable-completion.sh  git-nested.fish
share/zsh-completion/: _git-nested
test/: conftest.py  test_branch.py  test_clean.py  test_clone.py  test_completion.py  test_encode.py  test_error.py  test_fetch.py  test_gitignore.py  test_init.py  test_pull.py  test_push.py  test_rebase.py  test_reclone.py  test_status.py  test_submodule.py  test_version.py
test/scenarios/: test_extraction.py
test/unittest/: test_logging.py
